--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
       <meta http-equiv="CACHE-CONTROL" content="NO-CACHE">
-      <link rel="image_src" href="imgs/hat.png">
-      <meta property="og:image" content="imgs/hat.png" />
+      <link rel="image_src" href="imgs/instrument.png">
+      <meta property="og:image" content="imgs/instrument.png" />
       <meta property="og:image:type" content="image/png" />
       <!-- jQuery -->
       <script src="scripts/jquery-1.11.3.min.js"></script>
