--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                   </button>
-                  <a class="navbar-brand" href="/">
+                  <a class="navbar-brand" href="https://github.com/Silverfeelin">
                   <i class="fa fa-github"></i>
                   <span>Silverfeelin</span>
                   </a>
