--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
                         <option value="reedorgan">Reed Organ</option>
                         <option value="rockorgan">Rock Organ</option>
                         <option value="saxophone">Saxophone</option>
+                        <option value="spaceorgan">Space Synth</option>
+                        <option value="squarewave">Square Wave</option>
                         <option value="steeldrum">Steel Drum</option>
                         <option value="keyboard">The Model M</option>
                         <option value="trumpet">Trumpet</option>
