--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@
                      <input id="itemName" type="text" class="form-control" value="^orange;Custom Instrument">
                      <label for="itemDescription">Item description:</label>
                      <input id="itemDescription" type="text" class="form-control" value="A custom instrument created by me!">
+                     <label for="usedirectivesicon">Use Directive Icon: </label>
+                     <input id="usedirectivesicon" type="checkbox" class="form-control" value="Use Directives For Icon">
                      <label for="itemInstrument">Instrument:</label>
                      <select id="itemInstrument" class="form-control">
                         <option value="accordion">Accordion</option>
