--- a/index.html
+++ b/index.html
@@ -34,8 +34,13 @@
                   <span class="icon-bar"></span>
                   </button>
                   <a class="navbar-brand" href="https://github.com/Silverfeelin">
-                  <i class="fa fa-github"></i>
-                  <span>Silverfeelin</span>
+                     <i class="fa fa-github"></i>
+                     <span>Silverfeelin</span>
+                  </a>
+                  
+                  <a class="navbar-brand" href="https://github.com/Vortetty">
+                     <i class="fa fa-github"></i>
+                     <span>Vortetty</span>
                   </a>
                </div>
                <!-- Navbar links -->
@@ -43,7 +48,7 @@
                   <ul class="nav navbar-nav">
                      <!-- li class="active" -->
                      <li>
-                        <a href="https://github.com/Silverfeelin/Starbound-Instrumentalizer">View project on GitHub</a>
+                        <a href="https://github.com/Vortetty/Starbound-Instrumentalizer">View project on GitHub</a>
                      </li>
                   </ul>
                </div>
