--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
                      <span>Silverfeelin</span>
                   </a>
                   
+                  <span>&</span>
+                  
                   <a class="navbar-brand" href="https://github.com/Vortetty">
                      <i class="fa fa-github"></i>
                      <span>Vortetty</span>
