--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                      <span>Silverfeelin</span>
                   </a>
                   
-                  <a>
+                  <a class="navbar-brand">
                   <span>&</span>
                   </a>
                      
